examples/test/testpolicy5661.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5661
  namespace: namespace441
spec:
  podSelector:
    matchLabels:
      key1: value0
      key33: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value24
          key21: value13
      podSelector:
        matchLabels:
          key10: value0
          key26: value29
          key8: value28
